k8s/vizier/base/api_deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vizier-api
spec:
  replicas: 1
  selector:
    matchLabels:
      name: vizier-api
  template:
    metadata:
      labels:
        name: vizier-api
    spec:
      containers:
      - name: vizier-api-server
        image: gcr.io/pl-dev-infra/vizier/api_server_image:latest
        env:
        - name: PL_JWT_SIGNING_KEY
          valueFrom:
            secretKeyRef:
              key: jwt-signing-key
              name: pl-cluster-secrets
        envFrom:
        - configMapRef:
            name: pl-tls-config
        ports:
        - containerPort: 50200
          hostPort: 50200
        volumeMounts:
        - mountPath: /certs
          name: certs
      imagePullSecrets:
      - name: pl-image-secret
      volumes:
      - name: certs
        secret:
          secretName: service-tls-certs
