k8s/vizier/base/api_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vizier-api-service
spec:
  type: ClusterIP
  ports:
    - port: 50200
      protocol: TCP
      targetPort: 50200
      name: tcp-http2
  selector:
    name: vizier-api
