k8s/vizier/base/certmgr_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vizier-certmgr
spec:
  type: ClusterIP
  ports:
  - name: tcp-http2
    port: 50900
    protocol: TCP
    targetPort: 50900
  selector:
    name: vizier-certmgr
