k8s/vizier/base/cloud_connector_deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vizier-cloud-connector
spec:
  replicas: 1
  selector:
    matchLabels:
      name: vizier-cloud-connector
  template:
    metadata:
      labels:
        name: vizier-cloud-connector
      annotations:
        fluentbit.io/parser: logfmt
    spec:
      containers:
      - name: app
        image: gcr.io/pl-dev-infra/vizier/cloud_connector_server_image:latest
        env:
        - name: PL_JWT_SIGNING_KEY
          valueFrom:
            secretKeyRef:
              key: jwt-signing-key
              name: pl-cluster-secrets
        - name: PL_CLUSTER_ID
          valueFrom:
            secretKeyRef:
              key: cluster-id
              name: pl-cluster-secrets
        - name: PL_POD_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        - name: PL_MAX_EXPECTED_CLOCK_SKEW
          value: "2000"
        - name: PL_RENEW_PERIOD
          value: "1000"
        envFrom:
        - configMapRef:
            name: pl-cloud-config
        - configMapRef:
            name: pl-tls-config
        ports:
        - containerPort: 50800
          hostPort: 50800
        volumeMounts:
        - mountPath: /certs
          name: certs
        livenessProbe:
          httpGet:
            scheme: HTTPS
            path: /healthz
            port: 50800
      imagePullSecrets:
      - name: pl-image-secret
      volumes:
      - name: certs
        secret:
          secretName: service-tls-certs
