k8s/vizier/base/cloud_connector_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vizier-cloud-connector
spec:
  type: ClusterIP
  ports:
  - name: tcp-http2
    port: 50800
    protocol: TCP
    targetPort: 50800
  selector:
    name: vizier-cloud-connector
