k8s/vizier/base/kelvin_service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kelvin-service
spec:
  type: ClusterIP
  clusterIP: None
  ports:
  - port: 59300
    protocol: TCP
    targetPort: 59300
    name: tcp-http2
  selector:
    name: kelvin
