k8s/vizier/base/metadata_deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vizier-metadata
spec:
  replicas: 1
  selector:
    matchLabels:
      name: vizier-metadata
  template:
    metadata:
      labels:
        name: vizier-metadata
    spec:
      initContainers:
      - name: wait-nats
        image: alpine:3.6
        # yamllint disable
        command: ['sh', '-c', 'set -x;  apk add --no-cache curl;
          until timeout -t 2 curl -f "http://${NATS_ADDR}"; do
            echo "waiting for http://${NATS_ADDR}";
            sleep 2;
          done;']
        env:
        - name: NATS_ADDR
          value: "pl-nats-mgmt:8222"
      containers:
      - name: vizier-metadata
        image: gcr.io/pl-dev-infra/vizier/metadata_server_image:latest
        env:
        - name: PL_JWT_SIGNING_KEY
          valueFrom:
            secretKeyRef:
              key: jwt-signing-key
              name: pl-cluster-secrets
        # TODO(zasgar): Remove this.
        - name: PL_DISABLE_GRPC_AUTH
          value: "true"
        envFrom:
        - configMapRef:
            name: pl-tls-config
        volumeMounts:
        - mountPath: /certs
          name: certs
        livenessProbe:
          httpGet:
            scheme: HTTPS
            path: /healthz
            port: 50400
      imagePullSecrets:
      - name: pl-image-secret
      volumes:
      - name: certs
        secret:
          secretName: service-tls-certs
