k8s/vizier/base/metadata_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vizier-metadata
spec:
  type: ClusterIP
  ports:
  - name: tcp-http2
    port: 50400
    protocol: TCP
    targetPort: 50400
  selector:
    name: vizier-metadata
