k8s/vizier/base/patch_logging_pem_daemonset.yaml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: vizier-pem
spec:
  template:
    spec:
      containers:
      - name: fluent-bit
        image: gcr.io/pl-dev-infra/vizier/fluent-bit-image
        imagePullPolicy: Always
        volumeMounts:
        - name: varlog
          mountPath: /var/log
        - name: varlibdockercontainers
          mountPath: /var/lib/docker/containers
          readOnly: true
        - name: fluent-bit-config
          mountPath: /conf
        - name: certs
          mountPath: /certs
      terminationGracePeriodSeconds: 10
      volumes:
      - name: varlog
        hostPath:
          path: /var/log
      - name: varlibdockercontainers
        hostPath:
          path: /var/lib/docker/containers
      - name: fluent-bit-config
        configMap:
          name: fluent-bit-config
      - name: certs
        secret:
          secretName: service-tls-certs
      serviceAccountName: fluent-bit
