k8s/vizier/base/patch_logging_sidecar_cloud_connector.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vizier-cloud-connector
spec:
  template:
    spec:
      containers:
      - name: vizier-logtailer
        env:
        - name: PL_CLOUD_CONNECTOR_ADDR
          value: localhost:50800
