k8s/vizier/base/patch_pem_daemonset.yaml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: vizier-pem
spec:
  template:
    spec:
      containers:
      - name: pem
        volumeMounts:
        - name: certs
          mountPath: /certs
      volumes:
      - name: certs
        secret:
          secretName: service-tls-certs
